checkpatch-results/home/fedora/lkml-analysis/lkml/1/0000067140.e10aeb39c1d3567f1906ca36162c977c1b7c0672
WARNING:COMMIT_LOG_LONG_LINE: Possible unwrapped commit description (prefer a maximum 75 chars per line)
#40: 
> > drivers/block/drbd/drbd_proc.c:26:28: error: linux/autoconf.h: No such file or directory

WARNING:TYPO_SPELLING: 'suprise' may be misspelled - perhaps 'surprise'?
#48: 
> I only checked upstream - so this is no big suprise.
                                              ^^^^^^^

Some words may have been misspelled.  Consider reviewing them.

WARNING:BAD_SIGN_OFF: Use a single space after To:
#92: 
To:	sam@ravnborg.org

The signed-off-by line does not fall in line with the standards
specified by the community.

See: https://www.kernel.org/doc/html/latest/process/submitting-patches.html#developer-s-certificate-of-origin-1-1

WARNING:BAD_SIGN_OFF: Use a single space after Cc:
#93: 
Cc:	linux-next@vger.kernel.org, LKML <linux-kernel@vger.kernel.org>,

WARNING:BAD_SIGN_OFF: Unexpected content after email: 'linux-next@vger.kernel.org, LKML <linux-kernel@vger.kernel.org>,', should be: '"linux-next@vger.kernel.org, LKML" <linux-kernel@vger.kernel.org>'
#93: 
Cc:	linux-next@vger.kernel.org, LKML <linux-kernel@vger.kernel.org>,

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000067140.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 total: 0 errors, 5 warnings, 0 checks, 66 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000067140.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
